Console: fix favicon.ico - No such file or directory

--- a/system/foundation/oops/assets/debugger/500.phtml
+++ b/system/foundation/oops/assets/debugger/500.phtml
@@ -9,7 +9,7 @@ defined('DS') or exit('No direct script access.');
 <meta charset="utf-8">
 <meta name=robots content=noindex>
 <meta name=generator content="Rakit debugger">
-<link rel="icon" href="data:;base64,iVBORw0KGgo=">
+<link rel="icon" type="image/png" href="data:;base64,iVBORw0KGgo=">
 <title>Server Error</title>
 
 <style>
