--- a/system/foundation/oops/assets/debugger/500.phtml
+++ b/system/foundation/oops/assets/debugger/500.phtml
@@ -7,31 +7,30 @@ defined('DS') or exit('No direct script access.');
 ?>
 <!DOCTYPE html><!-- "' --></textarea></script></style></pre></xmp></a></audio></button></canvas></datalist></details></dialog></iframe></listing></meter></noembed></noframes></noscript></optgroup></option></progress></rp></select></table></template></title></video>
 <meta charset="utf-8">
-<meta name=robots content=noindex>
-<meta name=generator content="Rakit debugger">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="robots" content="noindex">
+<meta name="generator" content="Rakit debugger">
 <link rel="icon" type="image/png" href="data:;base64,iVBORw0KGgo=">
-<title>Server Error</title>
+<title>500 | Internal Server Error</title>
 
 <style>
-	#oops-error { all: initial; position: absolute; top: 0; left: 0; right: 0; height: 70vh; min-height: 400px; display: flex; align-items: center; justify-content: center; z-index: 1000 }
-	#oops-error div { all: initial; max-width: 550px; background: white; color: #333; display: block }
-	#oops-error h1 { all: initial; font: bold 50px/1.1 sans-serif; display: block; margin: 40px }
-	#oops-error p { all: initial; font: 20px/1.4 sans-serif; margin: 40px; display: block }
-	#oops-error small { color: gray }
-	#oops-error small span { color: silver }
+    #oops-error {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        min-height: 95vh;
+        color: #a0aec0;
+        color: rgba(160, 174, 192, 1);
+        font-size: 1.125em;
+        text-transform: uppercase;
+    }
 </style>
 
-<div id=oops-error>
-	<div>
-      <h1>Server Error</h1>
-
-      <p>We're sorry! The server encountered an internal error and
-      was unable to complete your request. Please try again later.</p>
-
-      <p><small>error 500 <span> | <?php echo @date('j. n. Y H:i') ?></span><?php if (!$logged): ?><br>Rakit is unable to log error.<?php endif ?></small></p>
-	</div>
+<div id="oops-error">
+    500 | Internal Server Error
 </div>
 
 <script>
-	document.body.insertBefore(document.getElementById('oops-error'), document.body.firstChild);
+    document.body.insertBefore(document.getElementById('oops-error'), document.body.firstChild);
 </script>
