--- a/system/foundation/oops/assets/panic/panic.css
+++ b/system/foundation/oops/assets/panic/panic.css
@@ -205,7 +205,7 @@
 }
 
 #oops-panic .highlight {
-	background: #fbf5ff;
+	background: #d9d0df;
 	color: #484467;
 	font-weight: bold;
 	font-style: normal;
