--- a/system/foundation/oops/assets/debugger/500.phtml
+++ b/system/foundation/oops/assets/debugger/500.phtml
@@ -14,6 +14,12 @@ defined('DS') or exit('No direct script access.');
 <title>500 | Internal Server Error</title>
 
 <style>
+    html, body {
+        font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+    pre, code {
+        font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+    }
     #oops-error {
         display: flex;
         justify-content: center;
