--- a/system/foundation/oops/assets/panic/content.phtml
+++ b/system/foundation/oops/assets/panic/content.phtml
@@ -75,7 +75,8 @@ $code = $e->getCode() ? ' #' . $e->getCode() : '';
                         <div class="<?php echo $collapsed ? 'oops-collapsed ' : '' ?>inner">
                             <p><b>File:</b> <?php echo Helpers::editorLink($ex->getFile(), $ex->getLine()) ?></p>
                             <?php if (is_file($ex->getFile())) : ?>
-                                <?php echo self::highlightFile($ex->getFile(), $ex->getLine(), 15, (($ex instanceof \ErrorException) && isset($ex->context)) ? $ex->context : null) ?>
+                                <?php $ctx = (\ErrorException::class === get_class($ex) || $ex instanceof \ErrorException) ? \System\Foundation\Oops\Context::getContext($ex) : null; ?>
+                                <?php echo self::highlightFile($ex->getFile(), $ex->getLine(), 15, is_array($ctx) ? $ctx : null) ?>
                             <?php endif ?>
                         </div>
                     </div>
@@ -145,7 +146,8 @@ $code = $e->getCode() ? ' #' . $e->getCode() : '';
                         </div>
                     <?php endif ?>
 
-                    <?php if ($ex instanceof \ErrorException && isset($ex->context) && is_array($ex->context)) : ?>
+                    <?php $vars = (\ErrorException::class === get_class($ex) || $ex instanceof \ErrorException) ? \System\Foundation\Oops\Context::getContext($ex) : null; ?>
+                    <?php if (is_array($vars) && $vars) : ?>
                         <div class="panel">
                             <h2><a data-oops-ref="^+" class="oops-toggle oops-collapsed">Variables</a></h2>
 
@@ -153,7 +155,7 @@ $code = $e->getCode() ? ' #' . $e->getCode() : '';
                                 <div class="outer">
                                     <table>
                                         <?php
-                                        foreach ($ex->context as $k => $v) {
+                                        foreach ($vars as $k => $v) {
                                             echo '<tr><th>$', Helpers::escapeHtml($k), '</th><td>', $dump($v, $k), "</td></tr>\n";
                                         }
                                         ?>
